--- a/text_processing.ipynb
+++ b/text_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "True"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "[26519990 rows x 3 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample = control_tweets.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>disorder</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12103244</th>\n",
+       "      <td>8de516754d</td>\n",
+       "      <td>whats up twitter dot com the funny person is back</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23591119</th>\n",
+       "      <td>4c0a0981dd</td>\n",
+       "      <td>@OfficialMonstaX omg cutie</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13200692</th>\n",
+       "      <td>92ff1eed3f</td>\n",
+       "      <td>I knew I was washed when I fell asleep in the ...</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106612</th>\n",
+       "      <td>b8af0c69e1</td>\n",
+       "      <td>santa bf is on his way to boys love (bimboland...</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15250249</th>\n",
+       "      <td>ffce1165aa</td>\n",
+       "      <td>So we gotta fight https://t.co/9wqcKfDsQA</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2405346</th>\n",
+       "      <td>502a353ced</td>\n",
+       "      <td>@diamondsigma ugh i’m so sorry at least u don’...</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23120641</th>\n",
+       "      <td>c0cd8ae189</td>\n",
+       "      <td>#RIPBrodieLee 😭😭😭 https://t.co/wndeRHzXCy</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26303054</th>\n",
+       "      <td>d57d2791dd</td>\n",
+       "      <td>@tetegalway Hello @bts_bighit  @BigHitEnt and ...</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14798059</th>\n",
+       "      <td>2b68c6bc0e</td>\n",
+       "      <td>@felipeprior 1M DO PRIOR NO TT\\n1M DO PRIOR NO...</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24561657</th>\n",
+       "      <td>851d711041</td>\n",
+       "      <td>Just vibin rn https://t.co/UGNG1mkTtN</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             user_id                                               text  \\\n",
+       "12103244  8de516754d  whats up twitter dot com the funny person is back   \n",
+       "23591119  4c0a0981dd                         @OfficialMonstaX omg cutie   \n",
+       "13200692  92ff1eed3f  I knew I was washed when I fell asleep in the ...   \n",
+       "106612    b8af0c69e1  santa bf is on his way to boys love (bimboland...   \n",
+       "15250249  ffce1165aa          So we gotta fight https://t.co/9wqcKfDsQA   \n",
+       "2405346   502a353ced  @diamondsigma ugh i’m so sorry at least u don’...   \n",
+       "23120641  c0cd8ae189          #RIPBrodieLee 😭😭😭 https://t.co/wndeRHzXCy   \n",
+       "26303054  d57d2791dd  @tetegalway Hello @bts_bighit  @BigHitEnt and ...   \n",
+       "14798059  2b68c6bc0e  @felipeprior 1M DO PRIOR NO TT\\n1M DO PRIOR NO...   \n",
+       "24561657  851d711041              Just vibin rn https://t.co/UGNG1mkTtN   \n",
+       "\n",
+       "         disorder  \n",
+       "12103244  control  \n",
+       "23591119  control  \n",
+       "13200692  control  \n",
+       "106612    control  \n",
+       "15250249  control  \n",
+       "2405346   control  \n",
+       "23120641  control  \n",
+       "26303054  control  \n",
+       "14798059  control  \n",
+       "24561657  control  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,6 +537,294 @@
     "        lemmatized_words = [lemmatizer.lemmatize(word, get_wordnet_pos(pos)) for word, pos in pos_tags]\n",
     "        return ' '.join(lemmatized_words)\n",
     "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_text(df):\n",
+    "    copy = df.copy()\n",
+    "\n",
+    "    functions = [\n",
+    "        remove_urls, \n",
+    "        remove_mentions, \n",
+    "        transform_emojis, \n",
+    "        normalize_text, \n",
+    "        remove_stopwords, \n",
+    "        # correct_spellings, sanki bunu yapmayınca daha iyi gibi, sen de bakarsın bi\n",
+    "        lemmatize_text\n",
+    "    ]\n",
+    "\n",
+    "    for func in functions:\n",
+    "        copy['text'] = copy['text'].apply(func)\n",
+    "\n",
+    "    return copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>disorder</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12103244</th>\n",
+       "      <td>8de516754d</td>\n",
+       "      <td>whats up twitter dot com the funny person is back</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23591119</th>\n",
+       "      <td>4c0a0981dd</td>\n",
+       "      <td>@OfficialMonstaX omg cutie</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13200692</th>\n",
+       "      <td>92ff1eed3f</td>\n",
+       "      <td>I knew I was washed when I fell asleep in the ...</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106612</th>\n",
+       "      <td>b8af0c69e1</td>\n",
+       "      <td>santa bf is on his way to boys love (bimboland...</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15250249</th>\n",
+       "      <td>ffce1165aa</td>\n",
+       "      <td>So we gotta fight https://t.co/9wqcKfDsQA</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2405346</th>\n",
+       "      <td>502a353ced</td>\n",
+       "      <td>@diamondsigma ugh i’m so sorry at least u don’...</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23120641</th>\n",
+       "      <td>c0cd8ae189</td>\n",
+       "      <td>#RIPBrodieLee 😭😭😭 https://t.co/wndeRHzXCy</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26303054</th>\n",
+       "      <td>d57d2791dd</td>\n",
+       "      <td>@tetegalway Hello @bts_bighit  @BigHitEnt and ...</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14798059</th>\n",
+       "      <td>2b68c6bc0e</td>\n",
+       "      <td>@felipeprior 1M DO PRIOR NO TT\\n1M DO PRIOR NO...</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24561657</th>\n",
+       "      <td>851d711041</td>\n",
+       "      <td>Just vibin rn https://t.co/UGNG1mkTtN</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             user_id                                               text  \\\n",
+       "12103244  8de516754d  whats up twitter dot com the funny person is back   \n",
+       "23591119  4c0a0981dd                         @OfficialMonstaX omg cutie   \n",
+       "13200692  92ff1eed3f  I knew I was washed when I fell asleep in the ...   \n",
+       "106612    b8af0c69e1  santa bf is on his way to boys love (bimboland...   \n",
+       "15250249  ffce1165aa          So we gotta fight https://t.co/9wqcKfDsQA   \n",
+       "2405346   502a353ced  @diamondsigma ugh i’m so sorry at least u don’...   \n",
+       "23120641  c0cd8ae189          #RIPBrodieLee 😭😭😭 https://t.co/wndeRHzXCy   \n",
+       "26303054  d57d2791dd  @tetegalway Hello @bts_bighit  @BigHitEnt and ...   \n",
+       "14798059  2b68c6bc0e  @felipeprior 1M DO PRIOR NO TT\\n1M DO PRIOR NO...   \n",
+       "24561657  851d711041              Just vibin rn https://t.co/UGNG1mkTtN   \n",
+       "\n",
+       "         disorder  \n",
+       "12103244  control  \n",
+       "23591119  control  \n",
+       "13200692  control  \n",
+       "106612    control  \n",
+       "15250249  control  \n",
+       "2405346   control  \n",
+       "23120641  control  \n",
+       "26303054  control  \n",
+       "14798059  control  \n",
+       "24561657  control  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>disorder</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12103244</th>\n",
+       "      <td>8de516754d</td>\n",
+       "      <td>whats twitter dot com funny person back</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23591119</th>\n",
+       "      <td>4c0a0981dd</td>\n",
+       "      <td>omg cutie</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13200692</th>\n",
+       "      <td>92ff1eed3f</td>\n",
+       "      <td>knew wash fell asleep club atlanta .</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106612</th>\n",
+       "      <td>b8af0c69e1</td>\n",
+       "      <td>santa bf way boys love ( bimboland )</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15250249</th>\n",
+       "      <td>ffce1165aa</td>\n",
+       "      <td>get ta fight</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2405346</th>\n",
+       "      <td>502a353ced</td>\n",
+       "      <td>ugh i ’ m sorry least u don ’ t b-boys ask bru...</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23120641</th>\n",
+       "      <td>c0cd8ae189</td>\n",
+       "      <td># ripbrodielee : loudly_crying_face : :loudly_...</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26303054</th>\n",
+       "      <td>d57d2791dd</td>\n",
+       "      <td>hello everyone concern . tire always report ma...</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14798059</th>\n",
+       "      <td>2b68c6bc0e</td>\n",
+       "      <td>1m prior tt 1m prior tt 1m prior tt 1m prior t...</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24561657</th>\n",
+       "      <td>851d711041</td>\n",
+       "      <td>vibin rn</td>\n",
+       "      <td>control</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             user_id                                               text  \\\n",
+       "12103244  8de516754d            whats twitter dot com funny person back   \n",
+       "23591119  4c0a0981dd                                          omg cutie   \n",
+       "13200692  92ff1eed3f               knew wash fell asleep club atlanta .   \n",
+       "106612    b8af0c69e1               santa bf way boys love ( bimboland )   \n",
+       "15250249  ffce1165aa                                       get ta fight   \n",
+       "2405346   502a353ced  ugh i ’ m sorry least u don ’ t b-boys ask bru...   \n",
+       "23120641  c0cd8ae189  # ripbrodielee : loudly_crying_face : :loudly_...   \n",
+       "26303054  d57d2791dd  hello everyone concern . tire always report ma...   \n",
+       "14798059  2b68c6bc0e  1m prior tt 1m prior tt 1m prior tt 1m prior t...   \n",
+       "24561657  851d711041                                           vibin rn   \n",
+       "\n",
+       "         disorder  \n",
+       "12103244  control  \n",
+       "23591119  control  \n",
+       "13200692  control  \n",
+       "106612    control  \n",
+       "15250249  control  \n",
+       "2405346   control  \n",
+       "23120641  control  \n",
+       "26303054  control  \n",
+       "14798059  control  \n",
+       "24561657  control  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "processed_sample = process_text(sample)\n",
+    "processed_sample"
    ]
   }
  ],
