--- a/sampling/disorder_music_sampling.ipynb
+++ b/sampling/disorder_music_sampling.ipynb
@@ -3807,6 +3807,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sampled.to_csv('../data/cleaned_sampled_disorder_musics.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
