--- a/modelling/comments.ipynb
+++ b/modelling/comments.ipynb
@@ -11,9 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -23,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +655,7 @@
        "[48000 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -663,17 +674,7 @@
      "output_type": "stream",
      "text": [
       "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/huggingface_hub/file_download.py:1150: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n",
-      "Some weights of BertModel were not initialized from the model checkpoint at mental/mental-bert-base-uncased and are newly initialized: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "Extracting Features: 100%|██████████| 11999/11999 [06:24<00:00, 31.21it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature extraction complete! Saved to bert_features.csv.\n"
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -685,14 +686,14 @@
     "from tqdm import tqdm\n",
     "import pandas as pd\n",
     "\n",
-    "data = val_df\n",
+    "data = train_df\n",
     "# Initialize BERT tokenizer and model\n",
     "model_name = \"mental/mental-bert-base-uncased\"  # You can choose other variants like \"bert-large-uncased\"\n",
     "\"\"\"tokenizer = BertTokenizer.from_pretrained(model_name)\n",
     "model = BertModel.from_pretrained(model_name)\n",
     "\"\"\"\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"mental/mental-bert-base-uncased\")\n",
-    "model = AutoModel.from_pretrained(\"mental/mental-bert-base-uncased\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"google-bert/bert-base-multilingual-cased\")\n",
+    "model = AutoModel.from_pretrained(\"google-bert/bert-base-multilingual-cased\")\n",
     "\n",
     "# Ensure the model is in evaluation mode\n",
     "model.eval()\n",
@@ -718,7 +719,7 @@
     "# Convert features to a DataFrame and save them\n",
     "features_df = pd.DataFrame(features)\n",
     "features_df['label'] = data['label']  # Add the original labels\n",
-    "features_df.to_csv(\"mental-bert_features_test.csv\", index=False)\n",
+    "features_df.to_csv(\"multi-bert_features_train.csv\", index=False)\n",
     "\n",
     "print(\"Feature extraction complete! Saved to bert_features.csv.\")\n"
    ]
