--- a/modelling/lyrics.ipynb
+++ b/modelling/lyrics.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,36 +819,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv(\"../data/processed_train_tweets.csv\")\n",
-    "val_df = pd.read_csv(\"../data/processed_val_tweets.csv\")"
+    "train_df = pd.read_csv(\"../data/processed_train_musics.csv\")\n",
+    "val_df = pd.read_csv(\"../data/processed_val_musics.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
+    "val_df.dropna(inplace=True)\n",
+    "train_df.dropna(inplace=True)\n",
+    "\n",
     "train_df.drop('Unnamed: 0', axis=1, inplace=True)\n",
     "val_df.drop('Unnamed: 0', axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "val_df.dropna(inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -872,35 +866,35 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>text</th>\n",
+       "      <th>lyric</th>\n",
        "      <th>label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td># titlesformelaniasmemoir . want money give f ...</td>\n",
-       "      <td>4</td>\n",
+       "      <td>[ hook : ty dolla sign ] meet club , say `` wa...</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>apparently mr ford fidelli quite enjoy it , ev...</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>jajajajjaa aaaaa eso por lo que anduvimos habl...</td>\n",
+       "      <td>[ write julia michael , justin tranter , oscar...</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>take movie move away froze standstill , foot t...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>dante demon form # ocs # hungrybeastsverse # b...</td>\n",
-       "      <td>3</td>\n",
+       "      <td>[ chorus ] break down , hysteric young uncomfo...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>lol probably practice diligently pull</td>\n",
-       "      <td>1</td>\n",
+       "      <td>[ verse 1 ] i 've hide long feeling , they 're...</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -908,53 +902,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47995</th>\n",
-       "      <td>meant suppress stress . stress need to . need ...</td>\n",
+       "      <th>2612</th>\n",
+       "      <td>[ verse 1 ] come cage i 've fine get ta , get ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2613</th>\n",
+       "      <td>[ verse 1 ] andalucia see snow farmer john wan...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2614</th>\n",
+       "      <td>baby love me , yes , yes ah , girl 's outta si...</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47996</th>\n",
-       "      <td>wan na gun cause rappin trappin , lots cappin .</td>\n",
-       "      <td>4</td>\n",
+       "      <th>2615</th>\n",
+       "      <td>[ a cappella interlude : nia andrew kelly rowl...</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47997</th>\n",
-       "      <td>butternut favourite name bread . hah</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47998</th>\n",
-       "      <td>know , give prince charles lot shit , big crim...</td>\n",
+       "      <th>2616</th>\n",
+       "      <td>ay , jing-a-di-jing hee haw hee haw dominick d...</td>\n",
        "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47999</th>\n",
-       "      <td>know old : fixing toilet satisfy thing that 's...</td>\n",
-       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>48000 rows × 2 columns</p>\n",
+       "<p>2617 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                    text  label\n",
-       "0      # titlesformelaniasmemoir . want money give f ...      4\n",
-       "1      apparently mr ford fidelli quite enjoy it , ev...      3\n",
-       "2      jajajajjaa aaaaa eso por lo que anduvimos habl...      4\n",
-       "3      dante demon form # ocs # hungrybeastsverse # b...      3\n",
-       "4                  lol probably practice diligently pull      1\n",
-       "...                                                  ...    ...\n",
-       "47995  meant suppress stress . stress need to . need ...      3\n",
-       "47996    wan na gun cause rappin trappin , lots cappin .      4\n",
-       "47997               butternut favourite name bread . hah      4\n",
-       "47998  know , give prince charles lot shit , big crim...      3\n",
-       "47999  know old : fixing toilet satisfy thing that 's...      5\n",
+       "                                                  lyric  label\n",
+       "0     [ hook : ty dolla sign ] meet club , say `` wa...      5\n",
+       "1     [ write julia michael , justin tranter , oscar...      4\n",
+       "2     take movie move away froze standstill , foot t...      2\n",
+       "3     [ chorus ] break down , hysteric young uncomfo...      1\n",
+       "4     [ verse 1 ] i 've hide long feeling , they 're...      4\n",
+       "...                                                 ...    ...\n",
+       "2612  [ verse 1 ] come cage i 've fine get ta , get ...      0\n",
+       "2613  [ verse 1 ] andalucia see snow farmer john wan...      1\n",
+       "2614  baby love me , yes , yes ah , girl 's outta si...      3\n",
+       "2615  [ a cappella interlude : nia andrew kelly rowl...      2\n",
+       "2616  ay , jing-a-di-jing hee haw hee haw dominick d...      3\n",
        "\n",
-       "[48000 rows x 2 columns]"
+       "[2617 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -973,17 +967,7 @@
      "output_type": "stream",
      "text": [
       "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/huggingface_hub/file_download.py:1150: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n",
-      "Some weights of BertModel were not initialized from the model checkpoint at mental/mental-bert-base-uncased and are newly initialized: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "Extracting Features: 100%|██████████| 11999/11999 [06:24<00:00, 31.21it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature extraction complete! Saved to bert_features.csv.\n"
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -995,42 +979,100 @@
     "from tqdm import tqdm\n",
     "import pandas as pd\n",
     "\n",
-    "data = val_df\n",
-    "# Initialize BERT tokenizer and model\n",
-    "model_name = \"mental/mental-bert-base-uncased\"  # You can choose other variants like \"bert-large-uncased\"\n",
-    "\"\"\"tokenizer = BertTokenizer.from_pretrained(model_name)\n",
-    "model = BertModel.from_pretrained(model_name)\n",
-    "\"\"\"\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"mental/mental-bert-base-uncased\")\n",
-    "model = AutoModel.from_pretrained(\"mental/mental-bert-base-uncased\")\n",
+    "data = train_df\n",
     "\n",
-    "# Ensure the model is in evaluation mode\n",
-    "model.eval()\n",
+    "model_name = 'brunokreiner/lyrics-bert'\n",
     "\n",
-    "# Function to extract features from text\n",
-    "def extract_features(text):\n",
-    "    # Tokenize input text\n",
-    "    inputs = tokenizer(text, return_tensors=\"pt\", truncation=True, padding=\"max_length\", max_length=128)\n",
-    "    # Get model outputs\n",
-    "    with torch.no_grad():\n",
-    "        outputs = model(**inputs)\n",
-    "    \n",
-    "    # Extract features from the last hidden state\n",
-    "    # Use the [CLS] token's embedding for a fixed-size representation\n",
-    "    cls_embedding = outputs.last_hidden_state[:, 0, :]\n",
-    "    return cls_embedding.squeeze().numpy()\n",
+    "# Load model from HuggingFace Hub\n",
+    "tokenizer = AutoTokenizer.from_pretrained('bert-base-uncased')\n",
+    "model = AutoModel.from_pretrained('bert-base-uncased')\n",
     "\n",
-    "# Process dataset and extract features\n",
-    "features = []\n",
-    "for text in tqdm(data['text'], desc=\"Extracting Features\"):\n",
-    "    features.append(extract_features(text))\n",
+    "#Mean Pooling - Take attention mask into account for correct averaging\n",
+    "def mean_pooling(model_output, attention_mask):\n",
+    "    token_embeddings = model_output[0] #First element of model_output contains all token embeddings\n",
+    "    input_mask_expanded = attention_mask.unsqueeze(-1).expand(token_embeddings.size()).float()\n",
+    "    return torch.sum(token_embeddings * input_mask_expanded, 1) / torch.clamp(input_mask_expanded.sum(1), min=1e-9)\n",
+    "\n",
+    "\n",
+    "data['lyric'] = data['lyric'].astype(str)\n",
+    "\n",
+    "sentences = data.lyric.values  # Ensure this is a list of strings\n",
+    "encoded_input = tokenizer(list(sentences), padding=True, truncation=True, return_tensors='pt')\n",
+    "\n",
+    "# Compute token embeddings\n",
+    "with torch.no_grad():\n",
+    "    model_output = model(**encoded_input)\n",
+    "\n",
+    "# Perform pooling. In this case, mean pooling.\n",
+    "sentence_embeddings = mean_pooling(model_output, encoded_input['attention_mask'])\n",
+    "\n",
     "\n",
     "# Convert features to a DataFrame and save them\n",
-    "features_df = pd.DataFrame(features)\n",
+    "features_df = pd.DataFrame(sentence_embeddings)\n",
     "features_df['label'] = data['label']  # Add the original labels\n",
-    "features_df.to_csv(\"mental-bert_features_test.csv\", index=False)\n",
+    "features_df.to_csv(\"bert_musicfeatures_train.csv\", index=False)\n",
     "\n",
     "print(\"Feature extraction complete! Saved to bert_features.csv.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting sentence-transformers\n",
+      "  Downloading sentence_transformers-3.3.1-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting transformers<5.0.0,>=4.41.0 (from sentence-transformers)\n",
+      "  Downloading transformers-4.47.1-py3-none-any.whl.metadata (44 kB)\n",
+      "Requirement already satisfied: tqdm in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sentence-transformers) (4.66.1)\n",
+      "Requirement already satisfied: torch>=1.11.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sentence-transformers) (2.3.0)\n",
+      "Requirement already satisfied: scikit-learn in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sentence-transformers) (1.3.2)\n",
+      "Requirement already satisfied: scipy in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sentence-transformers) (1.11.4)\n",
+      "Requirement already satisfied: huggingface-hub>=0.20.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sentence-transformers) (0.24.0)\n",
+      "Requirement already satisfied: Pillow in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sentence-transformers) (10.1.0)\n",
+      "Requirement already satisfied: filelock in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (3.13.4)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (2024.3.1)\n",
+      "Requirement already satisfied: packaging>=20.9 in /Users/alperendemirci/Library/Python/3.12/lib/python/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (24.1)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (6.0.1)\n",
+      "Requirement already satisfied: requests in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (2.31.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (4.12.2)\n",
+      "Requirement already satisfied: sympy in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from torch>=1.11.0->sentence-transformers) (1.12)\n",
+      "Requirement already satisfied: networkx in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from torch>=1.11.0->sentence-transformers) (3.3)\n",
+      "Requirement already satisfied: jinja2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from torch>=1.11.0->sentence-transformers) (3.1.3)\n",
+      "Requirement already satisfied: numpy>=1.17 in /Users/alperendemirci/Library/Python/3.12/lib/python/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (1.26.4)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (2023.12.25)\n",
+      "Collecting tokenizers<0.22,>=0.21 (from transformers<5.0.0,>=4.41.0->sentence-transformers)\n",
+      "  Downloading tokenizers-0.21.0-cp39-abi3-macosx_11_0_arm64.whl.metadata (6.7 kB)\n",
+      "Requirement already satisfied: safetensors>=0.4.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (0.4.3)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-learn->sentence-transformers) (1.3.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from scikit-learn->sentence-transformers) (3.2.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from jinja2->torch>=1.11.0->sentence-transformers) (2.1.5)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/alperendemirci/Library/Python/3.12/lib/python/site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (2.2.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (2023.11.17)\n",
+      "Requirement already satisfied: mpmath>=0.19 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sympy->torch>=1.11.0->sentence-transformers) (1.3.0)\n",
+      "Downloading sentence_transformers-3.3.1-py3-none-any.whl (268 kB)\n",
+      "Downloading transformers-4.47.1-py3-none-any.whl (10.1 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.1/10.1 MB\u001b[0m \u001b[31m1.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0m\n",
+      "\u001b[?25hDownloading tokenizers-0.21.0-cp39-abi3-macosx_11_0_arm64.whl (2.6 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.6/2.6 MB\u001b[0m \u001b[31m2.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: tokenizers, transformers, sentence-transformers\n",
+      "Successfully installed sentence-transformers-3.3.1 tokenizers-0.21.0 transformers-4.47.1\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -U sentence-transformers"
    ]
   },
   {
