--- a/modelling/tweets_feature_extraction.ipynb
+++ b/modelling/tweets_feature_extraction.ipynb
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,15 @@
      "output_type": "stream",
      "text": [
       "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/huggingface_hub/file_download.py:1150: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
+      "  warnings.warn(\n",
+      "Extracting Features: 100%|██████████| 48000/48000 [24:02<00:00, 33.27it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature extraction complete! Saved to bert_features.csv.\n"
      ]
     }
    ],
